--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ionic-native/status-bar": "^5.15.1",
     "@ionic/angular": "^4.11.1",
     "@ionic/storage": "^2.2.0",
+    "aos": "^2.3.4",
     "bootstrap": "^4.5.2",
     "cordova-android": "8.1.0",
     "cordova-browser": "6.0.0",
