--- a/package.json
+++ b/package.json
@@ -13,20 +13,20 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "~10.1.0",
-    "@angular/core": "~10.1.0",
-    "@angular/forms": "~10.1.0",
-    "@angular/http": "~7.2.15",
-    "@angular/platform-browser": "~10.1.0",
-    "@angular/platform-browser-dynamic": "~10.1.0",
-    "@angular/router": "~10.1.0",
-    "@ionic-native/camera": "^5.15.1",
-    "@ionic-native/core": "^5.15.1",
+    "@angular/common": "^10.1.5",
+    "@angular/core": "^10.1.5",
+    "@angular/forms": "^10.1.5",
+    "@angular/http": "^7.2.16",
+    "@angular/platform-browser": "^10.1.5",
+    "@angular/platform-browser-dynamic": "^10.1.5",
+    "@angular/router": "^10.1.5",
+    "@ionic-native/camera": "^5.28.0",
+    "@ionic-native/core": "^5.28.0",
     "@ionic-native/lottie-splash-screen": "^5.28.0",
-    "@ionic-native/splash-screen": "^5.15.1",
-    "@ionic-native/status-bar": "^5.15.1",
-    "@ionic/angular": "^4.11.1",
-    "@ionic/storage": "^2.2.0",
+    "@ionic-native/splash-screen": "^5.28.0",
+    "@ionic-native/status-bar": "^5.28.0",
+    "@ionic/angular": "^4.11.13",
+    "@ionic/storage": "^2.3.1",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "aos": "^2.3.4",
     "bootstrap": "^4.5.2",
@@ -36,41 +36,41 @@
     "cordova-plugin-camera": "~4.1.0",
     "cordova-plugin-device": "^2.0.3",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
-    "cordova-plugin-ionic-webview": "^4.1.2",
-    "cordova-plugin-splashscreen": "^5.0.3",
+    "cordova-plugin-ionic-webview": "^4.2.1",
+    "cordova-plugin-splashscreen": "^5.0.4",
     "cordova-plugin-statusbar": "^2.4.3",
     "cordova-plugin-whitelist": "^1.3.4",
-    "cordova-sqlite-storage": "^3.4.0",
-    "core-js": "^3.3.2",
-    "rxjs": "~6.5.3",
+    "cordova-sqlite-storage": "^3.4.1",
+    "core-js": "^3.6.5",
+    "rxjs": "^6.5.5",
     "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "~0.803.12",
-    "@angular-devkit/build-angular": "^0.1001.0",
-    "@angular-devkit/core": "~10.1.0",
-    "@angular-devkit/schematics": "~10.1.0",
-    "@angular/cli": "~10.1.0",
-    "@angular/compiler": "~10.1.0",
-    "@angular/compiler-cli": "~10.1.0",
-    "@angular/language-service": "~10.1.0",
-    "@ionic/angular-toolkit": "^2.0.0",
-    "@types/jasmine": "^3.4.4",
+    "@angular-devkit/architect": "^0.803.29",
+    "@angular-devkit/build-angular": "^0.1001.5",
+    "@angular-devkit/core": "^10.1.5",
+    "@angular-devkit/schematics": "^10.1.5",
+    "@angular/cli": "^10.1.5",
+    "@angular/compiler": "^10.1.5",
+    "@angular/compiler-cli": "^10.1.5",
+    "@angular/language-service": "^10.1.5",
+    "@ionic/angular-toolkit": "^2.3.3",
+    "@types/jasmine": "^3.5.14",
     "@types/jasminewd2": "^2.0.8",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.12.64",
     "codelyzer": "~5.1.2",
     "cordova-plugin-lottie-splashscreen": "^0.9.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.4.1",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "^2.1.0",
+    "karma-coverage-istanbul-reporter": "^2.1.1",
     "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.2",
-    "protractor": "~5.4.2",
+    "karma-jasmine-html-reporter": "^1.5.4",
+    "protractor": "^5.4.4",
     "ts-node": "~8.4.1",
-    "tslint": "~5.20.0",
-    "typescript": "~4.0.2"
+    "tslint": "^5.20.1",
+    "typescript": "^4.0.3"
   },
   "description": "An Ionic project",
   "cordova": {
